@@ -804,10 +804,9 @@ textual parts.")
 	articles active marks high low)
     (with-current-buffer nntp-server-buffer
       (when result
-	(when (and info
-		   (or (not dont-check)
-		       (not (setq active
-				  (nth 2 (assoc group nnimap-current-infos))))))
+	(when (or (not dont-check)
+		  (not (setq active
+			     (nth 2 (assoc group nnimap-current-infos)))))
 	  (let ((sequences (nnimap-retrieve-group-data-early
 			    server (list info))))
 	    (nnimap-finish-retrieve-group-infos server (list info) sequences
